--- a/laba5massives/laba5massives.vcxproj
+++ b/laba5massives/laba5massives.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="laba5massives.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
