--- a/laba5massives/laba5massives.vcxproj
+++ b/laba5massives/laba5massives.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="func.cpp" />
     <ClCompile Include="laba5massives.cpp" />
   </ItemGroup>
   <ItemGroup>
